Update parent pom, tidy use argLine in properties
The updated parent pom allows overriding argLine via properties section. We desire this to tidy things up and make it easier to support a EA Valhalla build.